--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a href="create">Create New</a>
+    <a href="~/create">Create New</a>
 </p>
 <table class="table">
     <thead>
